build/log/idf_py_stderr_output_5706
Command: make -j 10 all
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:7:9: note: '#pragma message: oled128x64.c is compiling...'
    7 | #pragma message("oled128x64.c is compiling...")
      |         ^~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c: In function 'oledTurnOnAllPixels':
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:111:8: error: implicit declaration of function '__isnull' [-Wimplicit-function-declaration]
  111 |     if(__isnull(oled)) {
      |        ^~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c: In function 'oledShowRAMContent':
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:128:9: warning: unused variable 'ret' [-Wunused-variable]
  128 |     def ret;
      |         ^~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c: At top level:
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:177:5: error: conflicting types for 'oledSetPixel'; have 'def(oled128x64Dev_t *, xy_t,  xy_t,  color_t)' {aka 'long int(oled128x64Dev_t *, short int,  short int,  unsigned char)'}
  177 | def oledSetPixel(oled128x64Dev_t *oled, xy_t row, xy_t col, color_t c) {
      |     ^~~~~~~~~~~~
In file included from /home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:5:
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.h:64:5: note: previous declaration of 'oledSetPixel' with type 'int(oled128x64Dev_t *, xy_t,  xy_t,  color_t)' {aka 'int(oled128x64Dev_t *, short int,  short int,  unsigned char)'}
   64 | int oledSetPixel(oled128x64Dev_t *oled, xy_t row, xy_t col, color_t c);
      |     ^~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c: In function 'oledSetPixel':
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:193:38: error: implicit declaration of function '__mask' [-Wimplicit-function-declaration]
  193 |         oled->canvas[canvasIndex] |= __mask(bitIndex);
      |                                      ^~~~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:195:38: error: implicit declaration of function '__inv_mask' [-Wimplicit-function-declaration]
  195 |         oled->canvas[canvasIndex] &= __inv_mask(bitIndex);
      |                                      ^~~~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c: In function 'oledDrawEmptyRect':
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:210:69: error: 'return' with no value, in function returning non-void [-Wreturn-mismatch]
  210 |     if(rowTopLeft > rowBottomRight || colTopLeft > colBottomRight)  return;
      |                                                                     ^~~~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:200:6: note: declared here
  200 | def  oledDrawEmptyRect(oled128x64Dev_t *oled,
      |      ^~~~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:218:9: error: implicit declaration of function '__write_at'; did you mean '_write_r'? [-Wimplicit-function-declaration]
  218 |         __write_at(rowTopLeft, y, color);
      |         ^~~~~~~~~~
      |         _write_r
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c: In function 'oledDrawText':
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:277:30: error: implicit declaration of function 'MAX' [-Wimplicit-function-declaration]
  277 |     byte_t finalLineHeight = MAX(lineHeight, defaultTextH(mainFont));
      |                              ^~~
In file included from /home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64Definitions.h:4,
                 from /home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:4:
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/../i2c/i2c.h: At top level:
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/../i2c/i2c.h:28:23: warning: 'i2cHandleSDAIsr' defined but not used [-Wunused-function]
   28 | static void IRAM_ATTR i2cHandleSDAIsr(void* pvI2CDev){
      |                       ^~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/../i2c/i2c.h:22:23: warning: 'i2cHandleSCLIsr' defined but not used [-Wunused-function]
   22 | static void IRAM_ATTR i2cHandleSCLIsr(void* pvI2CDev){
      |                       ^~~~~~~~~~~~~~~
make[2]: *** [esp-idf/oled128x64/CMakeFiles/__idf_oled128x64.dir/build.make:79: esp-idf/oled128x64/CMakeFiles/__idf_oled128x64.dir/oled128x64.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:7497: esp-idf/oled128x64/CMakeFiles/__idf_oled128x64.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
